/*
 * Copyright (c) 2021, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 */

import org.apache.tools.ant.taskdefs.condition.Os
import org.gradle.process.ExecOperations
import org.gradle.jvm.toolchain.JavaLanguageVersion
import org.gradle.jvm.toolchain.JavaToolchainService
import javax.inject.Inject

abstract class BallerinaExecHelper {
    @Inject abstract ExecOperations getExecOperations()
}

abstract class PatchBallerinaScriptsTask extends DefaultTask {
    @Inject abstract JavaToolchainService getJavaToolchainService()
    @Input abstract Property<String> getJballerinaToolsBinPath()
    @Input abstract Property<String> getBallerinaRuntimeBinPath()

    @TaskAction
    void patch() {
        def launcher = javaToolchainService.launcherFor { spec ->
            spec.languageVersion.set(JavaLanguageVersion.of(25))
        }.get()
        def java25Home = launcher.executablePath.asFile.parentFile.parentFile.absolutePath

        [new File(jballerinaToolsBinPath.get()), new File(ballerinaRuntimeBinPath.get())].each { binDir ->
            if (binDir.exists()) {
                binDir.eachFile { file ->
                    file.setExecutable(true)
                    if (!file.name.endsWith('.bat') && !file.name.endsWith('.cmd')) {
                        def original = file.text
                        def lines = original.split('\n').toList()
                        lines = lines.collect { it.replace('--sun-misc-unsafe-memory-access=allow', '').trim() }.findAll { !it.isEmpty() }
                        def shebangIdx = lines.findIndexOf { it.startsWith('#!') }
                        if (shebangIdx >= 0 && !lines.any { it.startsWith('export JAVA_HOME=') }) {
                            lines.add(shebangIdx + 1, "export JAVA_HOME='${java25Home}'")
                        }
                        def patched = lines.join('\n') + '\n'
                        if (patched != original) { file.text = patched }
                    }
                }
            }
        }
    }
}

plugins {
    id 'io.ballerina.plugin'
}

description = 'Ballerina - Oracle DB Ballerina Generator'

def packageName = 'oracledb'
def packageOrg = 'ballerinax'
def tomlVersion = stripBallerinaExtensionVersion("${project.version}")

def ballerinaTomlFilePlaceHolder = new File("${project.rootDir}/build-config/resources/Ballerina.toml")
def compilerPluginTomlFilePlaceHolder = new File("${project.rootDir}/build-config/resources/CompilerPlugin.toml")
def ballerinaTomlFile = new File("$project.projectDir/Ballerina.toml")
def compilerPluginTomlFile = new File("$project.projectDir/CompilerPlugin.toml")

def stripBallerinaExtensionVersion(String extVersion) {
    if (extVersion.matches(project.ext.timestampedVersionRegex)) {
        def splitVersion = extVersion.split('-')
        if (splitVersion.length > 3) {
            def strippedValues = splitVersion[0..-4]
            return strippedValues.join('-')
        } else {
            return extVersion
        }
    } else {
        return extVersion.replace("${project.ext.snapshotVersion}", '')
    }
}

ballerina {
    packageOrganization = packageOrg
    module = packageName
    langVersion = ballerinaLangVersion
}

dependencies {
    externalJars(group: 'io.ballerina.stdlib', name: 'sql-native', version: "${stdlibSqlVersion}") {
        transitive = false
    }
}

task updateTomlFiles {
    doLast {
        def stdlibDependentSqlVersion = stripBallerinaExtensionVersion(project.stdlibSqlVersion)

        def newConfig = ballerinaTomlFilePlaceHolder.text.replace('@project.version@', project.version.toString())
        newConfig = newConfig.replace('@toml.version@', tomlVersion)
        newConfig = newConfig.replace('@sql.version@', stdlibDependentSqlVersion)
        newConfig = newConfig.replace('@stdlib.sql.native.version@', project.stdlibSqlVersion.toString())
        newConfig = newConfig.replace('@stdlib.sql.version@', stdlibDependentSqlVersion)
        ballerinaTomlFile.text = newConfig

        def newCompilerPluginToml = compilerPluginTomlFilePlaceHolder.text.replace("@project.version@", project.version)
        compilerPluginTomlFile.text = newCompilerPluginToml
    }
}

task commitTomlFiles {
    def execHelper = project.objects.newInstance(BallerinaExecHelper)
    doLast {
        execHelper.execOperations.exec {
            ignoreExitValue true
            if (Os.isFamily(Os.FAMILY_WINDOWS)) {
                commandLine 'cmd', '/c', "git commit -m \"[Automated] Update the native jar versions\" Ballerina.toml Dependencies.toml CompilerPlugin.toml"
            } else {
                commandLine 'sh', '-c', "git commit -m '[Automated] Update the native jar versions' Ballerina.toml Dependencies.toml CompilerPlugin.toml"
            }
        }
    }
}

publishing {
    publications {
        maven(MavenPublication) {
            artifact source: createArtifactZip, extension: 'zip'
        }
    }
    repositories {
        maven {
            name = 'GitHubPackages'
            url = uri("https://maven.pkg.github.com/ballerina-platform/module-${packageOrg}-${packageName}")
            credentials {
                username = System.getenv('publishUser')
                password = System.getenv('publishPAT')
            }
        }
    }
}

def checkExecResult(execResult, failText, standardOutput) {
    if (execResult) {
        if (execResult.get().getExitValue() != 0) {
            throw new GradleException('Non-zero exit value: ' + execResult.get().getExitValue())
        }
        if (standardOutput.toString().contains(failText)) {
            throw new GradleException('"' + failText + '" string in output: ' + standardOutput.toString())
        }
    } else {
        throw new GradleException('Returned a null execResult object')
    }
}

task createTestDockerImage(type: Exec) {
    def standardOutput = new ByteArrayOutputStream()
    def dockerBuildCommand = !Os.isFamily(Os.FAMILY_WINDOWS)
            ? ['sh', '-c', "docker build -f $project.projectDir/tests/resources/Dockerfile -t ballerina-oracledb -q $project.projectDir/tests/resources/"]
            : ['cmd', '/c', "docker build -f $project.projectDir\\tests\\resources\\Dockerfile -t ballerina-oracledb -q $project.projectDir\\tests\\resources\\"]
    commandLine dockerBuildCommand
    doLast {
        checkExecResult(executionResult, 'Error', standardOutput)
        sleep(5 * 1000)
    }
}

def waitForContainerHealth(execOps, containerName) {
    def HEALTH_STATUS
    def counter = 0
    while (counter < 60) {
        sleep(10000)
        def output = new ByteArrayOutputStream()
        try {
            def cmd = !Os.isFamily(Os.FAMILY_WINDOWS) ?
                    ['sh', '-c', "docker inspect --format='{{json .State.Health.Status}}' ${containerName}"] :
                    ['cmd', '/c', "docker inspect --format=\"{{json .State.Health.Status}}\" ${containerName}"]
            execOps.exec {
                commandLine cmd
                standardOutput = output
            }
            HEALTH_STATUS = output?.toString()?.trim()
            if (HEALTH_STATUS?.toString()?.contains("healthy")) {
                return 0
            }
            if (counter % 6 == 0) {
                println("${counter / 6}: Waiting for container ${containerName} to be healthy")
                println("   HEALTH_STATUS: $HEALTH_STATUS \n")
            }
            counter = counter + 1
        } catch (err) {
            println(err)
            return 1
        }
    }
    return 1
}

def initializeDatabase(execOps, containerName) {
    println("Waiting for ${containerName} database to open.")
    sleep(70000)
    try {
        def temp
        def cmd = Os.isFamily(Os.FAMILY_WINDOWS) ?
                ['cmd', '/c', "docker exec ${containerName} /bin/bash -c 'cd /home/oracle && source .bashrc; sh ./sql-scripts/run-sql-scripts.sh'"] :
                ['sh', '-c', "docker exec ${containerName} /bin/bash -c 'cd /home/oracle && source .bashrc; sh ./sql-scripts/run-sql-scripts.sh'"]
        temp = execOps.exec {
            commandLine cmd ?: []
        }.exitValue
        return temp
    } catch (all) {
        println(all)
        return 1
    }
}

def startDockerContainer(execOps, containerName, port, sslPort) {
    def cmd = !Os.isFamily(Os.FAMILY_WINDOWS) ?
            ['sh', '-c', "docker run --rm -d --name ${containerName} -p ${port}:1521 -p ${sslPort}:2484 -t ballerina-oracledb"] :
            ['cmd', '/c', "docker run --rm -d --name ${containerName} -p ${port}:1521 -p ${sslPort}:2484 -t ballerina-oracledb"]
    execOps.exec {
        commandLine cmd ?: []
    }
    def healthCheck = waitForContainerHealth(execOps, containerName)
    if (healthCheck != 0) {
        throw new GradleException("Docker container '${containerName}' health test failed!")
    }
    println("Docker container '${containerName}' health test passed!")

    def initializeCheck = initializeDatabase(execOps, containerName)
    if (initializeCheck != 0) {
        throw new GradleException("Failed to initialize the database!")
    }
    println("Database initialized!")
}

task startTestDockerContainers() {
    def execHelper = project.objects.newInstance(BallerinaExecHelper)
    doLast {
        startDockerContainer(execHelper.execOperations, "ballerina-oracledb", 1521, 2484)
    }
}

def stopTestDockerContainer(execOps, containerName) {
    try {
        def stdOut = new ByteArrayOutputStream()
        def cmd = !Os.isFamily(Os.FAMILY_WINDOWS) ?
                ['sh', '-c', "docker stop ${containerName}"] :
                ['cmd', '/c', "docker stop ${containerName}"]
        execOps.exec {
            commandLine cmd
            standardOutput = stdOut
        }
    } catch (ignore) {
        println("Gradle process can safely ignore stopTestDockerContainers task")
    }
}

task stopTestDockerContainers() {
    def execHelper = project.objects.newInstance(BallerinaExecHelper)
    doLast {
        stopTestDockerContainer(execHelper.execOperations, "ballerina-oracledb")
    }
}


task patchBallerinaScripts(type: PatchBallerinaScriptsTask) {
    dependsOn 'unpackJballerinaTools'
    outputs.upToDateWhen { !tasks.named('unpackJballerinaTools').get().didWork }
    jballerinaToolsBinPath = layout.buildDirectory.dir("jballerina-tools-${project.ballerinaLangVersion}/bin").get().asFile.absolutePath
    ballerinaRuntimeBinPath = "${rootProject.projectDir.absolutePath}/target/ballerina-runtime/bin"
}

updateTomlFiles.dependsOn copyStdlibs
startTestDockerContainers.dependsOn createTestDockerImage

build.dependsOn "generatePomFileForMavenPublication"
build.dependsOn ":${packageName}-native:build"
test.dependsOn ":${packageName}-native:build"
build.dependsOn ":${packageName}-compiler-plugin:build"
test.dependsOn ":${packageName}-compiler-plugin:build"
build.finalizedBy stopTestDockerContainers
test.dependsOn startTestDockerContainers

build.dependsOn patchBallerinaScripts
test.dependsOn patchBallerinaScripts
copyStdlibs.dependsOn patchBallerinaScripts
